[project]
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "M1nPy"},
    {name = "Lucy Loerker", email = "codingkoopa@gmail.com"},
]
dependencies = [
    "tweepy~=4.13.0",
    "python-dotenv~=0.21.1",
]

[project.urls]
repository = "https://github.com/CodingKoopa/sync-twitter-pixiv"

[tool.pdm]
